[package]
name = "chiprust-emu-cli"
description = "CLI for chiprust-emu"
version = "0.2.0"
authors = ["Maxim Kuznetsov <maximxlssoff@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chiprust-emu = {version = "0.2.0", path = "../chiprust-emu"}
rodio = { version = "0.13.1", optional = true }
crossterm = "0.19.0"
clap = "2.33.3"
ctrlc = { version = "3.1.9", features = ["termination"] }
device_query = { version = "0.2.8", optional = true }
bimap = "0.6.1"
lazy_static = "1.4.0"
spin_sleep = "1.0.0"

[features]
default = ["sound", "input"]
sound = ["rodio"]
input = ["device_query"]
